Added responsive design for small devices

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="cardBackground">
             <div>
                 <article class="cardArticle">
-                    <h3>Item / Image</h3>
+                    <h3>Beer</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A of</p>
                     <a href="#">Buy Now</a>
                 </article>
